# LegalHallulens

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  fix_kappa_ci.py  pyproject.toml  requirements.txt  second_judge_harness.py
Notebooks/: FinHallulens_Debate_LangGraph.ipynb  LegalHalluLens_BatchProcessing.ipynb  LegalHalluLens_Debate_LangGraph.ipynb  LegalHalluLens_JudgeProcessing.ipynb  ModelComparison_Report.ipynb
Notebooks/second_judge_results/: second_judge_summary.csv  second_judge_summary_FIXED.csv
utils/: __init__.py  clauses_prompts.py  helpers.py  llm.py  llm_func.py
