[project]
name = "legalhallulens"
version = "0.1.0"
description = "Typed hallucination auditing and calibrated multi-agent debate for trustworthy legal AI (ICML 2026, PMLR 306)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Lalit Yadav" },
  { name = "Akshaj Gurugubelli" },
]
keywords = [
  "agentic-hallucination",
  "multi-agent-debate",
  "legal-ai",
  "trustworthy-ai",
  "llm-evaluation",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
]
dependencies = []
