[project]
name = "legalhallulens"
version = "0.1.0"
description = "Typed hallucination auditing and calibrated multi-agent debate for trustworthy legal AI (ICML 2026, PMLR 306)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
  { name = "Lalit Yadav" },
  { name = "Akshaj Gurugubelli" },
]
keywords = [
  "agentic-hallucination",
  "multi-agent-debate",
  "legal-ai",
  "trustworthy-ai",
  "llm-evaluation",
  "risk-direction-index",
  "cuad",
  "langgraph",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.12",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lalitdv9/LegalHallulens"
Repository = "https://github.com/lalitdv9/LegalHallulens"
Paper = "https://arxiv.org/abs/2606.18021"
"Hugging Face Papers" = "https://huggingface.co/papers/2606.18021"
DOI = "https://doi.org/10.48550/arXiv.2606.18021"
